# mobile-structure-mcp

./: README.md  pyproject.toml
src/mobile_structure_mcp/: mobile_structure_mcp.py
